fixed z-index on timeline

--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@ p {
   position: relative;
   max-width: 1200px;
   margin: 0 auto;
+  z-index: 0;
 }
 
 /* The actual timeline (the vertical ruler) */
@@ -68,6 +69,7 @@ p {
   top: 0;
   bottom: 0;
   left: 50%;
+  z-index: -1;
   /* margin-left: -3px; */
 }
 
